Fix double scrollbar bug and update registration page styles

--- a/src/styles/global.home.css
+++ b/src/styles/global.home.css
@@ -9,9 +9,40 @@ body {
   background-color: #000;
 }
 
+/* React Loading Overlay causes double scrollbars, the below selector will prevent this */
+._loading_overlay_wrapper {
+  overflow: hidden;
+}
+
+.form-control {
+  color: rgb(213, 209, 203);
+  background-color: rgb(19, 21, 22);
+  border-color: rgb(57, 62, 65);
+}
+
+.form-control:disabled  {
+  color: rgb(213, 209, 203);
+  background-color: rgb(43, 39, 41);
+  border-color: rgb(57, 62, 65);
+}
+
 .form-control:focus {
+  color: rgb(213, 209, 203);
+  background-color: rgb(43, 39, 41);
   border-color: #FF0000;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus {
+  color: rgb(213, 209, 203);
+  -webkit-text-fill-color: rgb(213, 209, 203);
+  background-color: rgb(43, 39, 41);
+  box-shadow: 0 0 0px 1000px #222 inset;
+  -webkit-box-shadow: 0 0 0px 1000px #222 inset;
+  border-color: rgb(57, 62, 65);
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 /* TEDx Button Styles */
@@ -36,7 +67,7 @@ body {
 .avatar {
   width: 100px;
   height: 100px;
-  border: 1px solid #ddd;
+  box-shadow: 0px 0px 15px #444;
   border-radius: 50%;
 }
 
